// Vitest Snapshot v1

exports[`createTestRecord 1`] = `
Record {
  "createdAt": DateVO {
    "props": {
      "value": 2022-01-31T16:00:00.000Z,
    },
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "values": RecordValues {
    "props": Map {
      "hello" => TextFieldValue {
        "props": {
          "value": "world",
        },
      },
    },
  },
}
`;

exports[`createTestRecord 2`] = `
Record {
  "createdAt": DateVO {
    "props": {
      "value": 2022-01-31T16:00:00.000Z,
    },
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "values": RecordValues {
    "props": Map {
      "hello" => NumberFieldValue {
        "props": {
          "value": 1,
        },
      },
    },
  },
}
`;

exports[`createTestRecord 3`] = `
Record {
  "createdAt": DateVO {
    "props": {
      "value": 2022-01-31T16:00:00.000Z,
    },
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "values": RecordValues {
    "props": Map {
      "hello" => TextFieldValue {
        "props": {
          "value": "world",
        },
      },
      "number" => NumberFieldValue {
        "props": {
          "value": 1,
        },
      },
    },
  },
}
`;
